# libcamera-mchp

./: README.md  meson.build  meson_options.txt
include/libcamera/: meson.build
include/libcamera/ipa/: meson.build  microchip_isc.mojom
src/apps/: meson.build
src/apps/mchpcam/: mchpcam-still.cpp  mchpcam_common.cpp  mchpcam_common.h  mchpcam_image_processor.h  meson.build
src/ipa/microchip-isc/: meson.build  microchip_isc_ipa.cpp
src/ipa/microchip-isc/algorithms/: agc.cpp  agc.h  awb.cpp  awb.h  blc.cpp  blc.h  ccm.cpp  ccm.h  common.cpp  common.h
src/libcamera/: control_ids_microchip.yaml  control_ranges.yaml
src/libcamera/pipeline/microchip-isc/: meson.build  microchip-isc.cpp
